--- a/TouchGFX/config/msvs/Application.props
+++ b/TouchGFX/config/msvs/Application.props
@@ -2,9 +2,9 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <ImportGroup Label="PropertySheets"/>
   <PropertyGroup Label="UserMacros">
-    <UseBPP>16</UseBPP>
+    <UseBPP>24</UseBPP>
     <TouchGFXReleasePath>..\..\..\Middlewares\ST\touchgfx</TouchGFXReleasePath>
-    <TouchGFXEnvPath>..\..\..\..\..\TouchGFX\4.18.0\env</TouchGFXEnvPath>
+    <TouchGFXEnvPath>..\..\..\..\..\..\..\..\..\TouchGFX\env</TouchGFXEnvPath>
     <ApplicationRoot>..\..</ApplicationRoot>
   </PropertyGroup>
   <PropertyGroup/>
