--- a/.gitignore
+++ b/.gitignore
@@ -664,3 +664,4 @@ MigrationBackup/
 # End of https://www.gitignore.io/api/c++,visualStudio,visualstudiocode,clion+all,eclipse,qtcreator,vim,cmake,ninja,qt,qml
 
 *build*/
+.mxproject
