--- a/TouchGFX/simulator/msvs/Application.vcxproj
+++ b/TouchGFX/simulator/msvs/Application.vcxproj
@@ -41,6 +41,8 @@
     <ClCompile Include="..\..\gui\src\containers\listItem_selected.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\containers\listItem_selectedBase.cpp"/>
     <ClCompile Include="..\..\gui\src\model\ModelListener.cpp"/>
+    <ClCompile Include="..\..\gui\src\containers\volumePanel.cpp"/>
+    <ClCompile Include="..\..\generated\gui_generated\src\containers\volumePanelBase.cpp"/>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(ApplicationRoot)\assets\texts\texts.xml"/>
@@ -210,6 +212,8 @@
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\listItem_notSelectedBase.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\containers\listItem_selected.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\listItem_selectedBase.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\containers\volumePanel.hpp"/>
+    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\volumePanelBase.hpp"/>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="$(ApplicationRoot)\generated\simulator\touchgfx.rc"/>
