--- a/TouchGFX/simulator/msvs/Application.vcxproj
+++ b/TouchGFX/simulator/msvs/Application.vcxproj
@@ -21,12 +21,10 @@
     <ClCompile Include="..\..\generated\gui_generated\src\common\FrontendApplicationBase.cpp"/>
     <ClCompile Include="..\..\gui\src\model\Model.cpp"/>
     <ClCompile Include="..\..\generated\simulator\src\video\SoftwareMJPEGDecoder.cpp"/>
-    <ClCompile Include="..\..\gui\src\main_screen\MainPresenter.cpp"/>
-    <ClCompile Include="..\..\gui\src\main_screen\MainView.cpp"/>
-    <ClCompile Include="..\..\generated\gui_generated\src\main_screen\MainViewBase.cpp"/>
-    <ClCompile Include="..\..\gui\src\memoryscreen_screen\MemoryScreenPresenter.cpp"/>
-    <ClCompile Include="..\..\gui\src\memoryscreen_screen\MemoryScreenView.cpp"/>
-    <ClCompile Include="..\..\generated\gui_generated\src\memoryscreen_screen\MemoryScreenViewBase.cpp"/>
+    <ClCompile Include="..\..\gui\src\main_screen\MainScreenPresenter.cpp"/>
+    <ClCompile Include="..\..\gui\src\main_screen\MainScreenView.cpp"/>
+    <ClCompile Include="..\..\gui\src\memoryscreen_screen\SDCardScreenPresenter.cpp"/>
+    <ClCompile Include="..\..\gui\src\memoryscreen_screen\SDCardScreenView.cpp"/>
     <ClCompile Include="..\..\gui\src\containers\ControlPanelSD.cpp"/>
     <ClCompile Include="..\..\gui\src\containers\ControlPanelRadio.cpp"/>
     <ClCompile Include="..\..\gui\src\radioscreen_screen\RadioScreenPresenter.cpp"/>
@@ -58,6 +56,14 @@
     <ClCompile Include="..\..\generated\gui_generated\src\containers\ControlPanelSDBase.cpp"/>
     <ClCompile Include="..\..\gui\src\containers\ScreenNavigator.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\containers\ScreenNavigatorBase.cpp"/>
+    <ClCompile Include="..\..\gui\src\containers\delegate\ControlPanelRadioDelegate.cpp"/>
+    <ClCompile Include="..\..\gui\src\containers\delegate\ControlPanelSDDelegate.cpp"/>
+    <ClCompile Include="..\..\gui\src\mainscreen_screen\MainScreenPresenter.cpp"/>
+    <ClCompile Include="..\..\gui\src\mainscreen_screen\MainScreenView.cpp"/>
+    <ClCompile Include="..\..\generated\gui_generated\src\mainscreen_screen\MainScreenViewBase.cpp"/>
+    <ClCompile Include="..\..\gui\src\sdcardscreen_screen\SDCardScreenPresenter.cpp"/>
+    <ClCompile Include="..\..\gui\src\sdcardscreen_screen\SDCardScreenView.cpp"/>
+    <ClCompile Include="..\..\generated\gui_generated\src\sdcardscreen_screen\SDCardScreenViewBase.cpp"/>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(ApplicationRoot)\assets\texts\texts.xml"/>
@@ -208,12 +214,10 @@
     <ClInclude Include="..\..\gui\include\gui\model\ModelListener.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\common\SimConstants.hpp"/>
     <ClInclude Include="..\..\generated\simulator\include\simulator\video\SoftwareMJPEGDecoder.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\main_screen\MainPresenter.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\main_screen\MainView.hpp"/>
-    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\main_screen\MainViewBase.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\memoryscreen_screen\MemoryScreenPresenter.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\memoryscreen_screen\MemoryScreenView.hpp"/>
-    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\memoryscreen_screen\MemoryScreenViewBase.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\main_screen\MainScreenPresenter.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\main_screen\MainScreenView.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\memoryscreen_screen\SDCardScreenPresenter.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\memoryscreen_screen\SDCardScreenView.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\containers\ControlPanelSD.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\containers\ControlPanelRadio.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\radioscreen_screen\RadioScreenPresenter.hpp"/>
@@ -244,6 +248,14 @@
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\ControlPanelSDBase.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\containers\ScreenNavigator.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\ScreenNavigatorBase.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\containers\delegate\ControlPanelRadioDelegate.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\containers\delegate\ControlPanelSDDelegate.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\mainscreen_screen\MainScreenPresenter.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\mainscreen_screen\MainScreenView.hpp"/>
+    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\mainscreen_screen\MainScreenViewBase.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\sdcardscreen_screen\SDCardScreenPresenter.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\sdcardscreen_screen\SDCardScreenView.hpp"/>
+    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\sdcardscreen_screen\SDCardScreenViewBase.hpp"/>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="$(ApplicationRoot)\generated\simulator\touchgfx.rc"/>
