--- a/TouchGFX/simulator/msvs/Application.vcxproj.filters
+++ b/TouchGFX/simulator/msvs/Application.vcxproj.filters
@@ -178,18 +178,6 @@
     <Filter Include="Header Files\gui\containers">
       <UniqueIdentifier>1D907664-5349-5177-D516-8FFB1268667D</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\gui\memoryscreen_screen">
-      <UniqueIdentifier>6127A066-4485-18A6-9648-B52F0F67D564</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\gui\memoryscreen_screen">
-      <UniqueIdentifier>860B97A0-D3C1-24C9-507E-953CFF115637</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\gui\main_screen">
-      <UniqueIdentifier>CEBAF7C8-EC2F-4302-B7CF-E0EE25877AB0</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\gui\main_screen">
-      <UniqueIdentifier>E5384D9E-1230-4FF4-B2C2-11C57F22277D</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\gui\radioscreen_screen">
       <UniqueIdentifier>D07DC570-FEB7-DF64-6039-689DDD092DCB</UniqueIdentifier>
     </Filter>
@@ -199,26 +187,14 @@
     <Filter Include="Header Files\generated\gui_generated\containers">
       <UniqueIdentifier>F074FA89-AE2C-E431-4424-638034DBB945</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\generated\gui_generated\main_screen">
-      <UniqueIdentifier>CC443F75-F1FB-6454-9786-3071DDCA2545</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\generated\gui_generated\radioscreen_screen">
       <UniqueIdentifier>773241E2-0F41-F780-776D-A6B26EE34371</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\generated\gui_generated\containers">
       <UniqueIdentifier>BC1539D0-D7E4-A0B4-BE4C-4C366DE365E8</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\generated\gui_generated\main_screen">
-      <UniqueIdentifier>D9614FE4-6D58-5E94-25AC-06516F767A0A</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\generated\gui_generated\radioscreen_screen">
       <UniqueIdentifier>8A2A66D9-3A97-FC27-E1C8-4AE888D07757</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\generated\gui_generated\memoryscreen_screen">
-      <UniqueIdentifier>0AECF4EA-595D-02C6-FD60-2273E0AFE6A9</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\generated\gui_generated\memoryscreen_screen">
-      <UniqueIdentifier>823FD22D-5009-98D3-A8B0-5AF7E901A375</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\gui\containers\delegate">
       <UniqueIdentifier>12196ACE-7C32-7136-3121-1FF5829CC493</UniqueIdentifier>
@@ -231,6 +207,30 @@
     </Filter>
     <Filter Include="Source Files\gui\containers\interface">
       <UniqueIdentifier>EF197B15-DE1B-B834-EE5C-2AF0963BA5D8</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\gui\sdcardscreen_screen">
+      <UniqueIdentifier>14036538-EDC8-4AB9-9F45-8837121ADD3F</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\gui\sdcardscreen_screen">
+      <UniqueIdentifier>B1963BC6-D51F-E24D-3B36-749CDDE2D511</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\gui\mainscreen_screen">
+      <UniqueIdentifier>7FFB2EFA-A5C3-8592-E7AF-3BAE6244D400</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\gui\mainscreen_screen">
+      <UniqueIdentifier>D172D1BD-24AF-41B1-7ADF-9BBE6781F500</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\generated\gui_generated\sdcardscreen_screen">
+      <UniqueIdentifier>9D52C563-941E-1796-3D1A-46D24D665C5F</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\generated\gui_generated\sdcardscreen_screen">
+      <UniqueIdentifier>0849A764-EF26-36EF-4540-61354BD64C91</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\generated\gui_generated\mainscreen_screen">
+      <UniqueIdentifier>D79027CB-2B05-47B3-2B9B-7936FADCCE42</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\generated\gui_generated\mainscreen_screen">
+      <UniqueIdentifier>0E5CF624-C6BA-0A95-0900-BF3CD699F1EC</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -263,24 +263,6 @@
     </ClCompile>
     <ClCompile Include="..\..\generated\simulator\src\video\SoftwareMJPEGDecoder.cpp">
       <Filter>Source Files\generated\simulator\video</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\gui\src\main_screen\MainScreenPresenter.cpp">
-      <Filter>Source Files\gui\main_screen</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\gui\src\main_screen\MainScreenView.cpp">
-      <Filter>Source Files\gui\main_screen</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\generated\gui_generated\src\main_screen\MainViewBase.cpp">
-      <Filter>Source Files\generated\gui_generated\main_screen</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\gui\src\memoryscreen_screen\SDCardScreenPresenter.cpp">
-      <Filter>Source Files\gui\memoryscreen_screen</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\gui\src\memoryscreen_screen\SDCardScreenView.cpp">
-      <Filter>Source Files\gui\memoryscreen_screen</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\generated\gui_generated\src\memoryscreen_screen\MemoryScreenViewBase.cpp">
-      <Filter>Source Files\generated\gui_generated\memoryscreen_screen</Filter>
     </ClCompile>
     <ClCompile Include="..\..\gui\src\containers\ControlPanelSD.cpp">
       <Filter>Source Files\gui\containers</Filter>
@@ -374,6 +356,30 @@
     </ClCompile>
     <ClCompile Include="..\..\generated\gui_generated\src\containers\ScreenNavigatorBase.cpp">
       <Filter>Source Files\generated\gui_generated\containers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\gui\src\containers\delegate\ControlPanelRadioDelegate.cpp">
+      <Filter>Source Files\gui\containers\delegate</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\gui\src\containers\delegate\ControlPanelSDDelegate.cpp">
+      <Filter>Source Files\gui\containers\delegate</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\gui\src\mainscreen_screen\MainScreenPresenter.cpp">
+      <Filter>Source Files\gui\mainscreen_screen</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\gui\src\mainscreen_screen\MainScreenView.cpp">
+      <Filter>Source Files\gui\mainscreen_screen</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\generated\gui_generated\src\mainscreen_screen\MainScreenViewBase.cpp">
+      <Filter>Source Files\generated\gui_generated\mainscreen_screen</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\gui\src\sdcardscreen_screen\SDCardScreenPresenter.cpp">
+      <Filter>Source Files\gui\sdcardscreen_screen</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\gui\src\sdcardscreen_screen\SDCardScreenView.cpp">
+      <Filter>Source Files\gui\sdcardscreen_screen</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\generated\gui_generated\src\sdcardscreen_screen\SDCardScreenViewBase.cpp">
+      <Filter>Source Files\generated\gui_generated\sdcardscreen_screen</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -817,24 +823,6 @@
     <ClInclude Include="..\..\generated\simulator\include\simulator\video\SoftwareMJPEGDecoder.hpp">
       <Filter>Header Files\generated\simulator\include\simulator\video</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\gui\include\gui\main_screen\MainScreenPresenter.hpp">
-      <Filter>Header Files\gui\main_screen</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\gui\include\gui\main_screen\MainScreenView.hpp">
-      <Filter>Header Files\gui\main_screen</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\main_screen\MainViewBase.hpp">
-      <Filter>Header Files\generated\gui_generated\main_screen</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\gui\include\gui\memoryscreen_screen\SDCardScreenPresenter.hpp">
-      <Filter>Header Files\gui\memoryscreen_screen</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\gui\include\gui\memoryscreen_screen\SDCardScreenView.hpp">
-      <Filter>Header Files\gui\memoryscreen_screen</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\memoryscreen_screen\MemoryScreenViewBase.hpp">
-      <Filter>Header Files\generated\gui_generated\memoryscreen_screen</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\gui\include\gui\containers\ControlPanelSD.hpp">
       <Filter>Header Files\gui\containers</Filter>
     </ClInclude>
@@ -924,6 +912,30 @@
     </ClInclude>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\ScreenNavigatorBase.hpp">
       <Filter>Header Files\generated\gui_generated\containers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\gui\include\gui\containers\delegate\ControlPanelRadioDelegate.hpp">
+      <Filter>Header Files\gui\containers\delegate</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\gui\include\gui\containers\delegate\ControlPanelSDDelegate.hpp">
+      <Filter>Header Files\gui\containers\delegate</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\gui\include\gui\mainscreen_screen\MainScreenPresenter.hpp">
+      <Filter>Header Files\gui\mainscreen_screen</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\gui\include\gui\mainscreen_screen\MainScreenView.hpp">
+      <Filter>Header Files\gui\mainscreen_screen</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\mainscreen_screen\MainScreenViewBase.hpp">
+      <Filter>Header Files\generated\gui_generated\mainscreen_screen</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\gui\include\gui\sdcardscreen_screen\SDCardScreenPresenter.hpp">
+      <Filter>Header Files\gui\sdcardscreen_screen</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\gui\include\gui\sdcardscreen_screen\SDCardScreenView.hpp">
+      <Filter>Header Files\gui\sdcardscreen_screen</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\sdcardscreen_screen\SDCardScreenViewBase.hpp">
+      <Filter>Header Files\generated\gui_generated\sdcardscreen_screen</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
