--- a/TouchGFX/simulator/msvs/Application.vcxproj
+++ b/TouchGFX/simulator/msvs/Application.vcxproj
@@ -35,21 +35,14 @@
     <ClCompile Include="..\..\generated\gui_generated\src\containers\VolumePanelBase.cpp"/>
     <ClCompile Include="..\..\gui\src\containers\PeripheralStateIndicators.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\containers\PeripheralStateIndicatorsBase.cpp"/>
-    <ClCompile Include="..\..\gui\src\containers\delegate\PeripheralStateIndicatorsDelegate.cpp"/>
     <ClCompile Include="..\..\gui\src\containers\TitleView.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\containers\TitleViewBase.cpp"/>
-    <ClCompile Include="..\..\gui\src\containers\delegate\VolumePanelDelegate.cpp"/>
-    <ClCompile Include="..\..\gui\src\containers\delegate\TitleViewDelegate.cpp"/>
-    <ClCompile Include="..\..\gui\src\containers\delegate\TimePanelDelegate.cpp"/>
-    <ClCompile Include="..\..\gui\src\containers\interface\TimePanelInterface.cpp"/>
     <ClCompile Include="..\..\gui\src\containers\ControlPanelRadio.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\containers\ControlPanelRadioBase.cpp"/>
     <ClCompile Include="..\..\gui\src\containers\ControlPanelSD.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\containers\ControlPanelSDBase.cpp"/>
     <ClCompile Include="..\..\gui\src\containers\ScreenNavigator.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\containers\ScreenNavigatorBase.cpp"/>
-    <ClCompile Include="..\..\gui\src\containers\delegate\ControlPanelRadioDelegate.cpp"/>
-    <ClCompile Include="..\..\gui\src\containers\delegate\ControlPanelSDDelegate.cpp"/>
     <ClCompile Include="..\..\gui\src\mainscreen_screen\MainScreenPresenter.cpp"/>
     <ClCompile Include="..\..\gui\src\mainscreen_screen\MainScreenView.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\mainscreen_screen\MainScreenViewBase.cpp"/>
@@ -60,6 +53,8 @@
     <ClCompile Include="..\..\generated\gui_generated\src\containers\ListItemBase.cpp"/>
     <ClCompile Include="..\..\gui\src\containers\Playlist.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\containers\PlaylistBase.cpp"/>
+    <ClCompile Include="..\..\gui\src\containers\ErrorDialog.cpp"/>
+    <ClCompile Include="..\..\generated\gui_generated\src\containers\ErrorDialogBase.cpp"/>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(ApplicationRoot)\assets\texts\texts.xml"/>
@@ -225,19 +220,12 @@
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\PeripheralStateIndicatorsBase.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\containers\TitleView.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\TitleViewBase.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\containers\delegate\PeripheralStateIndicatorsDelegate.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\containers\delegate\TitleViewDelegate.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\containers\delegate\VolumePanelDelegate.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\containers\delegate\TimePanelDelegate.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\containers\interface\TimePanelInterface.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\containers\ControlPanelRadio.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\ControlPanelRadioBase.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\containers\ControlPanelSD.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\ControlPanelSDBase.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\containers\ScreenNavigator.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\ScreenNavigatorBase.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\containers\delegate\ControlPanelRadioDelegate.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\containers\delegate\ControlPanelSDDelegate.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\mainscreen_screen\MainScreenPresenter.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\mainscreen_screen\MainScreenView.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\mainscreen_screen\MainScreenViewBase.hpp"/>
@@ -248,6 +236,8 @@
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\ListItemBase.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\containers\Playlist.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\PlaylistBase.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\containers\ErrorDialog.hpp"/>
+    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\containers\ErrorDialogBase.hpp"/>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="$(ApplicationRoot)\generated\simulator\touchgfx.rc"/>
